# rocket-interceptor

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  build.bat  build.rs  build.sh  docker-compose.yml  network-config.toml  results.xml
.config/: nextest.toml  rustfmt.toml
.gitlab/issue_templates/: default.md
.gitlab/merge_request_templates/: default.md
docs/: contributing.md  running-manually.md
docs/resources/: rippled-docker-image.md  running-manually.md
network/: rippled_base.cfg
network/validator_1/config/: rippled.cfg  validators.txt
network/validator_2/config/: rippled.cfg  validators.txt
network/validator_3/config/: rippled.cfg  validators.txt
network/validator_secrets/: 1_secp.json  2_secp.json  3_secp.json
network/validators/validator_0/config/: rippled.cfg  validators.txt
network/validators/validator_1/config/: rippled.cfg  validators.txt
network/validators/validator_10/config/: rippled.cfg  validators.txt
network/validators/validator_11/config/: rippled.cfg  validators.txt
network/validators/validator_12/config/: rippled.cfg  validators.txt
network/validators/validator_13/config/: rippled.cfg  validators.txt
network/validators/validator_14/config/: rippled.cfg  validators.txt
proto/: packet.proto  packet_pb2.py  packet_pb2_grpc.py
rippled_docker/: README.md  entrypoint.sh  rippled_patched.Dockerfile
src/: alt_peer_connector.rs  connection_handler.rs  docker_manager.rs  lib.rs  logger.rs  main.rs  node_info.rs  packet_client.rs  peer_connector.rs
(+30 files in other folders)
