[package]
name = "xrpl-packet-interceptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
openssl = "0.10.64"
secp256k1 = "0.29.0"
log = "0.4.21"
bytes = "1.6.0"
sha2 = "0.11.0-pre.3"
tokio-openssl = "0.6.4"
httparse = "1.8.0"
env_logger = "0.11.3"
serde = { version = "1.0.201", features = ["std", "derive"] }
toml = "0.8.12"
serde_json = "1.0.117"
bollard = "0.16.1"
futures-util = "0.3.30"
rand = "0.9.0-alpha.1"
tonic = "0.11.0"
prost = "0.12.4"
tokio-stream = "0.1.15"
chrono = "0.4.38"
lazy_static = "1.4.0"
hex = "0.4.3"
http = "1.1.0"
regex = "1.10.5"
ctrlc = "3.4.4"
base64 = "0.22.1"
basex-rs = "0.2.0"

[build-dependencies]
tonic-build = "0.11.0"
